force-app/main/default/objects/AR_Charge_Code__c/fields/Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Amount__c</fullName>
    <label>Default Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>