force-app/main/default/objects/AR_Charge_Code__c/fields/EBS_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>EBS_Department_Code__c</fullName>
    <label>EBS Department Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>