force-app/main/default/objects/AR_Charge_Code__c/fields/EBS_Revenue_GL__c.field-meta.xml
<CustomField>
    <fullName>EBS_Revenue_GL__c</fullName>
    <label>EBS Revenue GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>