force-app/main/default/objects/AR_Charge_Code__c/fields/EBS_Trade_Receivables__c.field-meta.xml
<CustomField>
    <fullName>EBS_Trade_Receivables__c</fullName>
    <label>EBS Trade Receivables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>