force-app/main/default/objects/AR_Charge_Code__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>&apos;Inactive&apos;</defaultValue>
    <description>Indicates whether the charge code is currently active or inactive.</description>
    <inlineHelpText>Choose &apos;Active&apos; to make this charge code available for use in transactions. Select &apos;Inactive&apos; to restrict its use. Note that only Finance Super Users have permission to change this status. For assistance, please reach out to your administrator.</inlineHelpText>
    <label>Is Active?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Approval</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>