force-app/main/default/objects/AR_Charge_Code__c/fields/Revenue_GL__c.field-meta.xml
<CustomField>
    <fullName>Revenue_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipName>Charge_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>