force-app/main/default/objects/AR_Charge_Code__c/fields/Trade_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Trade_Receivables__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Receivables</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipName>Charge_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>