force-app/main/default/objects/AR_Charge_Code__c/fields/Unearned_GL__c.field-meta.xml
<CustomField>
    <fullName>Unearned_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the Unearned GL Account.</description>
    <label>Unearned GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipName>Charge_Codes3</relationshipName>
    <type>Lookup</type>
</CustomField>