force-app/main/default/objects/AR_Charge_Code__c/fields/VAT_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_Type__c</fullName>
    <label>VAT Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusive</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>