force-app/main/default/objects/AR_Charge_Code__c/fields/Yardi_VAT__c.field-meta.xml
<CustomField>
    <fullName>Yardi_VAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yardi VAT</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipName>Yardi_Charge_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>